--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 BattleShips TODO list
 -------------------------------------------------------------------
-
+> Make the game take ships with size > 5 
 > Add a limitation to guesses + how many guesses left.
 > Guesses should only account for clicking empty squares. 
 > If guesses made > guessLimit = you lose.
