--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,7 @@ BattleShips TODO list
 -------------------------------------------------------------------
 > Make the game take ships with size > 5 
 > Add a limitation to guesses + how many guesses left.
-> Guesses should only account for clicking empty squares. 
+> (Svilen-Done)Guesses should only account for clicking empty squares. 
 > If guesses made > guessLimit = you lose.
 > Game over screen should display a winning/losing message instead of only "Play again"
 	> It should also contain the score, guesses made, guesses hit/lost.
@@ -13,3 +13,4 @@ read by the game on each start.
 	> Scoreboard - takes you to the score board. - scoreboard opens a new window. 
 	> Exit - exits the game.
 > Playing sounds on clicking/winning/losing 
+>  (Svilen-Done) Adding battleship icons on info 
