--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@ BattleShips TODO list
 > Make the game take ships with size > 5 
 > (Svilen-Done )Add a limitation to guesses(limit to 20) + how many guesses left.
 > (Svilen-Done)Guesses should only account for clicking empty squares. 
-> If guesses made > guessLimit = you lose.
+> (Georgi-Done)If guesses made > guessLimit = you lose.
 > Game over screen should display a winning/losing message instead of only "Play again"
 	> It should also contain the score, guesses made, guesses hit/lost.
 > The game should feature a score board, hosted online and downloaded and 
